[package]
name = "oms"
edition = "2021"

[dependencies]
tokio = { version = "^1.45.1", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rust_decimal = "^1.30"
chrono = { version = "^0.4", features = ["serde"] }
actix-web = "^4"
env_logger = "^0.11.8"
once_cell = "1.21.3"
rand = "0.9.1"
mysql = "*"